--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
         </activity>
         <activity
             android:name=".DetailRecipe"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:parentActivityName=".MainRecipesList" />
+
+
         <activity android:name=".WidgetConfigureActivity">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
