--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!--configChanges added  beside it's code on StepFragment.java
+         to handle video seek to
+        previous position while rotation-->
         <activity
             android:name=".ui.DetailRecipe"
             android:configChanges="orientation|screenSize|keyboardHidden"
