Still Exo Orientation Issue

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
 
         <activity
             android:name=".ui.activity.DetailRecipe"
+            android:launchMode="singleTop"
             android:parentActivityName=".ui.activity.MainRecipesList" />
 
         <receiver android:name=".ui.widget.RecipeWidget">
